--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest -i"
+    "test": "jest -i" ,
+    "debug": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
