--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-cors": "0.0.3",
+    "express-ws": "^4.0.0",
     "jsonwebtoken": "^8.3.0",
     "pg": "^7.5.0",
     "supertest": "^4.0.2"
