--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.3.0",
     "pg": "^7.5.0",
+    "socket.io": "^3.0.4",
     "supertest": "^4.0.2",
     "websocket": "^1.0.33"
   }
