--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-ws": "^4.0.0",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.3.0",
+    "nodemon": "^2.0.6",
     "pg": "^7.5.0",
     "socket.io": "^3.0.4",
     "supertest": "^4.0.2",
