--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-cors": "0.0.3",
+    "express-session": "^1.17.1",
     "express-ws": "^4.0.0",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.3.0",
