--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-jobs",
+  "name": "rollplay",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,8 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-  },
+  "bugs": {},
   "devDependencies": {
     "concurrently": "^5.3.0"
   }
