--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "frontend": "cd frontend && npm start",
     "backend": "cd backend && npm start",
+    "rollplay": "npm i && cd frontend && npm i && cd .. && cd backend && npm i && cd ..",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
